--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "movies",
+  "name": "technigo-react-vite-boiler",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "dom": "^0.0.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
+    "router": "^2.2.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
