--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dom": "^0.0.3",
     "react": "^19.1.0",
+    "react-aria-components": "^1.8.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
